--- a/client/html/index.html
+++ b/client/html/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+        html, body {
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;            
+        }
+        </style>
+    </head>
     <body>
         <script src="generated.js"></script>
     </body>
