--- a/client/html/index.html
+++ b/client/html/index.html
@@ -9,9 +9,23 @@
             height: 100%;
             overflow: hidden;            
         }
+        #reticle {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            width: 20px;
+            height: 20px;
+            line-height: 20px;
+            margin: -10px 0 0 -10px;
+            z-index: 99;
+            color: white;
+            text-shadow: 1px 1px 0px black;
+            text-align: center;
+        }
         </style>
     </head>
     <body>
+        <div id="reticle">+</div>
         <script src="generated.js"></script>
     </body>
 </html>
