Added websockets for multiplayer

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -23,6 +23,7 @@
             text-align: center;
         }
         </style>
+        <script src="/socket.io/socket.io.js"></script>
     </head>
     <body>
         <div id="reticle">+</div>
